# ChromaTerm

./: .gitignore  INTERNET_CLEANUP_REPO_REVIEW.md  README.md  SYNTAX_ERRORS_FOUND.md  pyproject.toml  setup.py
chromaterm/: __init__.py  __main__.py  default_config.py  pcre.py
chromaterm/platform/: __init__.py  unix.py
chromaterm/platform/tests/: test_platform.py
chromaterm/rules/: generic-networking.yml  linux.yml  network-numbers.yml
chromaterm/tests/: .chromaterm.yml  conftest.py  test___init__.py  test__main__.py  test_default_config.py
contrib/rules/: ssh-sessions.yml
