[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromaterm"
description = "Color your Terminal with Regex!"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "hSaria", email = "sariahajjar@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
  "psutil>=5.9",
  "PyYAML>=6.0",
]
keywords = ["terminal", "color", "regex", "highlight"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hSaria/ChromaTerm"

[project.scripts]
ct = "chromaterm.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "chromaterm.__version__" }

[tool.setuptools.packages.find]
include = ["chromaterm*"]

